test_errors_2.txt
warning: struct `ScoredEntry` is never constructed
  --> crates\nanobot-core\src\memory\vector_store.rs:12:8
   |
12 | struct ScoredEntry {
   |        ^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: function `print_completion_message` is never used
   --> crates\nanobot-core\src\setup\wizard.rs:319:4
    |
319 | fn print_completion_message(workspace_d...
    |    ^^^^^^^^^^^^^^^^^^^^^^^^

warning: `nanobot-core` (lib) generated 2 warnings
   Compiling nanobot-core v0.1.0 (C:\Users\AMAN ANU\Desktop\amxcodes\nanobot\nanobot-rs-clean\crates\nanobot-core)
error[E0061]: this method takes 3 arguments but 2 arguments were supplied
   --> crates\nanobot-core\tests\orchestration_test.rs:14:34
    |
 14 |     let parent_session = manager.create_session(None, None).await?;
    |                                  ^^^^^^^^^^^^^^------------ argument #3 of type `CleanupPolicy` is missing
    |
note: expected `SessionType`, found `Option<_>`
   --> crates\nanobot-core\tests\orchestration_test.rs:14:49
    |
 14 |     let parent_session = manager.create_session(None, None).await?;
    |                                                 ^^^^
    = note: expected enum `SessionType`
               found enum `Option<_>`
note: method defined here
   --> C:\Users\AMAN ANU\Desktop\amxcodes\nanobot\nanobot-rs-clean\crates\nanobot-core\src\gateway\agent_manager.rs:138:18
    |
138 |     pub async fn create_session(
    |                  ^^^^^^^^^^^^^^
help: provide the argument
    |
 14 -     let parent_session = manager.create_session(None, None).await?;
 14 +     let parent_session = manager.create_session(/* SessionType */, None, /* CleanupPolicy */).await?;
    |

error[E0369]: binary operation `==` cannot be applied to type `TaskStatus`
  --> crates\nanobot-core\tests\orchestration_test.rs:44:5
   |
44 |     assert_eq!(fetched_task.status, TaskStatus::Pending);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     TaskStatus
   |     TaskStatus
   |
note: the foreign item type `TaskStatus` doesn't implement `PartialEq`
  --> C:\Users\AMAN ANU\Desktop\amxcodes\nanobot\nanobot-rs-clean\crates\nanobot-core\src\gateway\agent_manager.rs:51:1
   |
51 | pub enum TaskStatus {
   | ^^^^^^^^^^^^^^^^^^^ not implement `PartialEq`
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0061]: this method takes 3 arguments but 2 arguments were supplied
   --> crates\nanobot-core\tests\orchestration_test.rs:59:30
    |
 59 |         let parent = manager.create_session(None, None).await?;
    |                              ^^^^^^^^^^^^^^------------ argument #3 of type `CleanupPolicy` is missing
    |
note: expected `SessionType`, found `Option<_>`
   --> crates\nanobot-core\tests\orchestration_test.rs:59:45
    |
 59 |         let parent = manager.create_session(None, None).await?;
    |                                             ^^^^
    = note: expected enum `SessionType`
               found enum `Option<_>`
note: method defined here
   --> C:\Users\AMAN ANU\Desktop\amxcodes\nanobot\nanobot-rs-clean\crates\nanobot-core\src\gateway\agent_manager.rs:138:18
    |
138 |     pub async fn create_session(
    |                  ^^^^^^^^^^^^^^
help: provide the argument
    |
 59 -         let parent = manager.create_session(None, None).await?;
 59 +         let parent = manager.create_session(/* SessionType */, None, /* CleanupPolicy */).await?;
    |

error[E0369]: binary operation `==` cannot be applied to type `TaskStatus`
  --> crates\nanobot-core\tests\orchestration_test.rs:93:5
   |
93 |     assert_eq!(task.status, TaskStatus::Running);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     TaskStatus
   |     TaskStatus
   |
note: the foreign item type `TaskStatus` doesn't implement `PartialEq`
  --> C:\Users\AMAN ANU\Desktop\amxcodes\nanobot\nanobot-rs-clean\crates\nanobot-core\src\gateway\agent_manager.rs:51:1
   |
51 | pub enum TaskStatus {
   | ^^^^^^^^^^^^^^^^^^^ not implement `PartialEq`
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

Some errors have detailed explanations: E0061, E0369.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `nanobot-core` (test "orchestration_test") due to 4 previous errors
